# Celeris

./: .gitignore  Cargo.toml  LICENSE  makefile  readme.md
.github/workflows/: openbench.yml  tests.yml
chess/: Cargo.toml  readme.md
chess/src/: build.rs  lib.rs  main.rs
chess/src/board/: fen.rs  history.rs  mask.rs  mod.rs  movegen.rs  movement.rs  zobrist.rs
chess/src/buildutils/: magic_table_gen.rs  utils.rs
chess/src/core/: bitboard.rs  errors.rs  macros.rs  mod.rs  moves.rs  piece.rs  square.rs  types.rs
chess/src/utils/: mod.rs  perft.rs  prng.rs
data/: small.nnue
engine/: Cargo.toml
engine/src/: engine.rs  lib.rs  main.rs  uci.rs
engine/src/cli/: command.rs  mod.rs  uci.rs
engine/src/engine/: command.rs  engine.rs  interface.rs  mod.rs  options.rs  params.rs  time.rs  uci.rs
engine/src/eval/: eval.rs  mod.rs  pawns.rs  psqt.rs
engine/src/movepick/: history.rs  mod.rs  move_buffer.rs  movepick.rs  see.rs
engine/src/search/: clock.rs  helper.rs  mod.rs  pv.rs  quiescence.rs  search.rs  stack.rs  tt.rs  tune.rs  utils.rs  worker.rs
engine/src/thread/: mod.rs  thread.rs  threadpool.rs
engine/src/time/: clock.rs  mod.rs  time.rs
engine/src/types/: mod.rs  tt.rs
engine/src/uci/: command.rs  mod.rs
engine/src/utils/: bench.rs  mod.rs  tune.rs
macros/: Cargo.toml
macros/src/: lib.rs
nnue/: Cargo.toml
nnue/data/: big.nnue  small.nnue
nnue/src/: accummulator.rs  accumulator.rs  flatten.rs  lib.rs  params.rs  utils.rs
src/: build.rs  lib.rs  main.rs
src/board/: fen.rs  history.rs  mask.rs  mod.rs  movegen.rs  movement.rs  zobrist.rs
src/board/movegen/: gen.rs  lookup.rs  move_list.rs
src/buildutils/: magic_table_gen.rs  mod.rs  utils.rs
src/core/: bitboard.rs  board.rs  errors.rs  mod.rs  moves.rs  piece.rs  square.rs  types.rs
src/core/board/: fen.rs  movement.rs  (+1 more)
src/movegen/: init.rs  lookup.rs  magic.rs  magic_numbers.rs  mod.rs  move_gen.rs  move_list.rs
src/utils/: magic_gen.rs  misc.rs  mod.rs  perft.rs  prng.rs
(+5 files in other folders)
