[workspace]
resolver = "2"
members = ["chess", "engine", "nnue"]

[profile.release]
opt-level = 3           # Optimize for file size
lto = true              # Heavy link-time optimization
codegen-units = 1       # Only one codegen unit so we don't miss optimizations
target-cpu = "native"   # Enable CPU-specific optimizations
incremental = false     # Enable aggressive inlining
panic = "abort"         # Enable panic=abort for smaller binary size
overflow-checks = false # Enable overflow checks in debug mode
debug = true            # No debug information
strip = true            # No symbols
